@@ -12,6 +12,7 @@
   * Added support to edit auth_user (linked user) through node's pseudo attribute 'auth' (admin only) or
     through 'auth_user'.
   * Created 'manager' user status: can edit users (only through 'auth'). <== TODO: Document
+  * Created 'currency' brick to fetch openexchangerates.org exchange rates. <== TODO: Document
     
 * Minor changes
   * Fixed gemspec to not include TextMate helper and selenium plugin.
